# python_linux_test_platform

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  GitHub_About.md  README.md  SECURITY.md  SPECIFICATION.md  hello.md  pyproject.toml  requirements-dev.txt  requirements.txt
python_linux_test_platform.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
results/DEMO-123/20250830-194142/: report.csv  report.json
results/UUT-001/20250830-194125/: report.csv  report.json
test_framework/: __init__.py  checkers.py  demo_showcase.py  mock_serial_device.py  report.py  runner_cli.py  serial_talker.py  shell.py  shell_cli.py  test_runner.py
test_framework/backends/: __init__.py  serial_prompt_talker.py  ssh_prompt_talker.py
tests/: test_checkers.py  test_report.py  test_serial.py  test_shell.py
